--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.SheAsks">
+        <activity android:name=".PythonCategory"></activity>
+        <activity android:name=".WebCategory" />
+        <activity android:name=".GitCategory" />
+        <activity android:name=".JavaCategory" />
+        <activity android:name=".LogIn" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
