--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,11 +9,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.SheAsks">
-        <activity android:name=".PythonCategory"></activity>
+        <activity android:name=".SearchQuestionActivity" />
+        <activity android:name=".AddErrorInAppActivity" />
+        <activity android:name=".AddQuestionActivity" />
+        <activity android:name=".PythonCategory" />
         <activity android:name=".WebCategory" />
         <activity android:name=".GitCategory" />
         <activity android:name=".JavaCategory" />
-        <activity android:name=".LogIn" />
+        <activity android:name=".Login" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -22,5 +25,4 @@
             </intent-filter>
         </activity>
     </application>
-
 </manifest>
