--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.SheAsks">
-        <activity android:name=".Settings"></activity>
+        <activity android:name=".AnswersActivity" />
+        <activity android:name=".Settings" />
         <activity android:name=".SearchQuestionActivity" />
         <activity android:name=".AddErrorInAppActivity" />
         <activity android:name=".AddQuestionActivity" />
